--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocJams">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
-    <link rel="stylesheet" href="/styles/style.css">
+  <meta charset="UTF-8">
+  <title>Bloc Jams Angular</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300" type="text/css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" type="text/css">
+  <link rel="stylesheet" href="/styles/normalize.css" type="text/css">
+  <link rel="stylesheet" href="/styles/main.css" type="text/css">
+  <link rel="stylesheet" href="/styles/landing.css" type="text/css">
+  <link rel="stylesheet" href="/styles/collection.css" type="text/css">
+  <link rel="stylesheet" href="/styles/album.css" type="text/css">
+  <link rel="stylesheet" href="/styles/player_bar.css" type="text/css">
 </head>
 <body>
-    <script src="/scripts/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+  <script src="/scripts/app.js"></script>
 </body>
 </html>
